crates/bsql/tests/compile_fail/ddl_rejected.rs
fn main() {
    let _ = bsql::query!(
        "CREATE TABLE should_not_work (id int)"
    );
}
